# at-a-glance-of-a-key

./: LICENSE
compile-using-aws-spot-instance/: aws_helper.py  aws_wrapper.py  builder.py  ssh_helper.py
java-offload-large-ddb-items-to-s3/: pom.xml
java-offload-large-ddb-items-to-s3/src/main/java/org/sirotin/example/: ItemToStore.java  StorageLayer.java
java-offload-large-ddb-items-to-s3/src/main/java/org/sirotin/example/offloader/: GZIPCompression.java  LargeItem.java  LargeItemsHandler.java  ReflectionHelper.java
java-offload-large-ddb-items-to-s3/src/test/java/org/sirotin/example/offloader/: GZipCompressionTest.java  (+1 more)
java-unit-test-for-injection/: pom.xml
java-unit-test-for-injection/src/main/java/org/sirotin/example/: Main.java
java-unit-test-for-injection/src/test/java/org/sirotin/example/: InjectionTest.java
jenkins-get-last-successful-build/: get_last_successful_build.py
redis-distributed-messages/: README.md  producer.py  requirements.txt  server.py  simple-consumer.py  streams-consumer.py
simple-python-testing-framework/: examples.txt  load_tests_to_autocompletion.sh  tests_common.py  tests_runner.py
simple-python-testing-framework/tests/: test_always_fails.py  test_internet_connectivity.py  test_python_version.py  test_sleeping_and_failing.py
simple-url-redirection-using-flask/: app.py
sqs-benchmark-tool/: CMakeLists.txt
sqs-benchmark-tool/src/: counter.hpp  generator.cpp  generator.h  main.cpp  sender.cpp  sender.h  synchronizer.h  synchronizer.hpp
using-selenium-with-python-example/: Default.aspx  Default.aspx.cs  demo.py
(+3 files in other folders)
